# GLM-OCR

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: column_split.py  config.py  layout.py  main.py  pipeline.py  quality.py  schemas.py  service.py
scripts/: client.py  examples.sh  run_supervised.sh
tests/: test_api.py  test_column_split.py  test_quality.py
